# voo

./: Cargo.toml  README.md
crates/domain/: Cargo.toml
crates/domain/src/models/: agent.rs  tools.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs
crates/models/src/models/: gemini.rs
crates/models/src/tools/: list_files.rs  read_file.rs
docs/: agent.md
src/: main.rs
