[package]
name = "voo"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
dotenvy = "0.15.7"
serde_json = { version = "1.0.140" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[workspace.dependencies.reqwest]
version = "0.12.15"
features = ["json"]

[workspace.dependencies.serde]
version = "1.0.219"
features = ["derive"]

[workspace.dependencies.tokio]
version = "1.44.2"
features = ["full"]

[[bin]]
name = "voo"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
domain = { path = "crates/domain" }
dotenvy.workspace = true
models = { path = "crates/models" }
serde.workspace = true
serde_json.workspace = true

tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
